src/css/style.css
:root {
    --clr-background-color: #222222;
    --clr-header-color: #FF8626;
    --clr-screen-color: #536B80;
    --clr-aside-color: #114573;
    --clr-footer-color: #B58C1B;
    --font-family: 'Be Vietnam Pro';
    /* --font-family: system-ui; */
    --font-size: 1.125rem;
}


/* ---------------------------------------------------- */
/* CSS Reset https://andy-bell.co.uk/a-modern-css-reset/*/
/* Box sizing rules */
*,
*::before,
*::after {
    box-sizing: border-box;
}

/* Remove default margin */
* {
    margin: 0;
    padding: 0;
    font: inherit;
}

/* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
ul[role='list'],
ol[role='list'] {
    list-style: none;
}

/* Set core root defaults */
html:focus-within {
    scroll-behavior: smooth;
}

html,
body {
    height: 100%;
}

/* Set core body defaults */
body {
    text-rendering: optimizeSpeed;
    line-height: 1.5;
}

/* A elements that don't have a class get default styles */
a:not([class]) {
    text-decoration-skip-ink: auto;
}

/* Make images easier to work with */
/* img,
picture,
svg {
    max-width: 100%;
    display: block;
} */

/* ---------------------------------------------------- */

body {
    background-color: var(--clr-background-color);
    font-family: var(--font-family);
    font-size: var(--font-size);
    color: white;
    margin-left: 50px;
    margin-top: 10px;
}

.header {
    background-color: var(--clr-header-color);
    top: 0;
    width: 1200px;
    height: 100px;
    display: flex;
    position: relative;
    justify-content: center;
    align-items: center;
}

.header h1 {
    font-size: xx-large;
    font-family: 'Agbalumo';
}

.header .background-music-container {
    position: absolute;
    right: 0;
    margin-right: 30px;
}

.main {
    width: 1200px;
    height: 800px;
    display: flex;
}

.screen {
    background-color: var(--clr-screen-color);
    width: 1000px;
    display: flex;
    flex-wrap: wrap;
}

.game-description,
.player-name-container,
.start-game-btn-container {
    width: 100%;
    height: 20%;
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
}

.game-description {
    padding-top: 100px;
}

.game-description p {
    padding-top: 5px;
    width: 100%;
    text-align: center;
    font-size: larger;
}

.player-name-container label {
    width: 100%;
    padding-top: 50px;
    text-align: center;
}

input[type="text"] {
    height: 40px;
    padding: 10px;
    border: 1px solid #ccc;
    border-radius: 6px;
}

input[type="text"]:focus {
    outline: none;
    border-color: #007bff;
}

button[type="button"] {
    padding: 10px 20px;
    background-color: #007bff;
    color: #fff;
    border: none;
    border-radius: 4px;
}

button[type="button"]:hover {
    background-color: #0056b3;
}

#start-game-button {
    height: 70px;
    width: 500px;
}

.aside {
    background-color: var(--clr-aside-color);
    width: 200px;
    padding-top: 50px;
    text-align: center;
}

.game-info h2 {
    text-decoration: underline;
}

.game-info p {
    padding-top: 50px;
}

#onscreen-stats {
    display: flex;

}

#game-board {
    background-color: skyblue;
    background-image: url("../../assets/mid_ground_cloud_1.png");
    background-size: cover;
    background-repeat: no-repeat;
    overflow: hidden;
    position: relative;
}

#under-game-board {
    width: 100%;
    display: flex;
    justify-content: end;
}

#end-game-button {
    height: 50px;
    margin-right: 20px;
}

#onscreen-stats {
    width: 100%;
    display: flex;
    justify-content: space-around;
    align-items: center;
}

.footer {
    background-color: var(--clr-footer-color);
    /* border: 2px solid yellow; */
    width: 1200px;
    padding-top: 20px;
    text-align: center;
}

.footer ul {
    display: flex;
    padding: 20px 50px 50px 50px;
    justify-content: space-evenly;

}

.footer ul li {
    padding: 10px;
    margin-right: 1.5rem;
    border-radius: 0.5rem;
    box-shadow: 0 0.5rem 1rem -0.25rem;
    background-color: #CC9E1F;
    color: black;
}

.link:visited {
    color: black;
}

.link:hover {
    color: blue;
}



/* Helper */
.hidden {
    display: none;
}

/* Animations */
@keyframes moveSpritesheet {
    from {
        transform: translate(0, 0);
    }

    to {
        transform: translate(-100%, 0);
    }
}

@keyframes jump-animation {
    0% {
        transform: translateY(0x);
    }

    25% {
        transform: translateY(-100px);
    }

    50% {
        transform: translateY(-300px);
    }

    75% {
        transform: translateY(-100px);
    }

    100% {
        transform: translateY(0);
    }
}

@keyframes bullet-animation {
    0% {
        transform: translateX(0);
    }

    100% {
        transform: translateX(1000px);
    }
}

/* Display message for screens that are too small */
#screen-too-small {
    display: none;
}

@media (max-width: 1250px) or (max-height: 810px) {

    .main,
    .credits {
        display: none;
    }

    #screen-too-small {
        display: block;

    }

    #screen-too-small p {
        font-size: 20px;
    }
}

